@@ -1,1 +1,0 @@
-// logout routines for Konqueror go here
