@@ -1,1 +1,0 @@
-// Logout routines for Opera go here
